Spacing Issues Resolved

--- a/css/home/home.scss
+++ b/css/home/home.scss
@@ -234,6 +234,10 @@ text-align: center;
   margin-top: -75px;
   font-size: 20px;
 }
+.testimonials
+{
+  padding-bottom: 30px;
+}
 .testimonials .testimonial-column h3{
   color: white;
 
@@ -278,6 +282,10 @@ text-align: center;
       padding-bottom: 50px;
     }
   }
+  .testimonials
+{
+  padding-bottom: 30px;
+}
 
   
     //hides the hamburger icon ---------------
@@ -394,6 +402,10 @@ text-align: center;
         padding-right: 100px;
         padding-left: 100px;
       }
+      .testimonials
+{
+  padding-bottom: 30px;
+}
       .line-separator{
         width: 100%; 
         background-color: #4b4b4b;
